<resources>
    <string name="app_name">Visit Vratsa</string>
    <string name="main_title">This is Vratsa</string>
    <string name="main_subtitle">Vratsa is a city in northwestern Bulgaria, at the foothills of the Balkan Mountains.</string>
    <string name="main_text">Vratsa is City as Mountain - ancient and young. \nVisit the most beautiful city in Bulgaria. \n\nVratsa is the largest city in northwestern Bulgaria, administrative and economic center. Located 110 km. Sofia - the capital of Bulgaria. \nRazpolozhen at the foot of Vratsa Balkan - it is a starting point to numerous caves, waterfalls and rock formations. \nNay prominent among them are Peshtarata Ledenika, waterfalls and Skaklya pass Vratsa .....</string>
    <string name="main_mainImageContentDescription">Panorama view of Vratsa</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">Home</string>
    <string name="main_category1">See &amp; Do</string>
    <string name="main_category2">Eat, Drink &amp; Stay</string>
    <string name="main_category3">Transport</string>
    <string name="main_category4">Good to know</string>
    <string name="main_category1_item1">History</string>
    <string name="main_category1_item2">Nature</string>
    <string name="main_category1_item3">Near by</string>
    <string name="main_category1_item4">Fun</string>
    <string name="main_category2_item1">Cafes</string>
    <string name="main_category2_item2">Restaurants</string>
    <string name="main_category2_item3">Hotels</string>
    <string name="main_category2_item4">Nightlife</string>
    <string name="main_category3_item1">Buses</string>
    <string name="main_category3_item2">Trains</string>
    <string name="main_category3_item3">Taxis</string>
    <string name="main_category3_item4">Rent a car</string>
    <string name="main_category3_item5">Shuttles</string>
    <string name="main_category3_item6">Trolleybuses</string>
    <string name="main_category4_item1">Emergency</string>
    <string name="main_category4_item2">Places with Wi-Fi</string>
    <string name="main_category4_item3">Shops</string>
    <string name="main_category4_item4">Municipality</string>
    <string name="main_category4_item5">Nature Park</string>
    <string name="main_category2_item1_details">Кафенета \nЗа хората, който обичат сутрин аромата на топло току що приготвено кафе. Имат възможнаст да си изберат от кафенетата в града. Едната възмождност е да се поразходят в центъра на града т. нар. Пробива и там да си изберат от многобрайните кафенета. Или предварително да си изберат от интернет кафенето, което искат да посетят. \nhttps://www.getlokal.com/bg/vratsa/kafeneta-sladkarnitsi/kafeneta</string>
    <string name="main_category2_item2_details">Ресторанти \nВ града могат да се посетят множество ресторанти.  В повечето от тях се предлагат типично местна кухня характерна да региона.  \nОт врачанско идват много автентични рецепти, както и много традиционни ястия с общ или недоизяснен произход. В село Згориград (4 km южно от града) се провежда кулинарен събор, където се събират и оценяват многобройни вкусни рецепти. \nНякой от популярните ястия в региона са: \n•	Сирене по Врачански \n•	Кемерка \n•	Лучник \n•	Лютика \nhttp://www.vratza.bg/pictures/files/393.pdf</string>
    <string name="main_category2_item3_details"> Хотели \nЗа осигуряване на почивката и отдиха на посетитеи на града, могат да си избират от множества хотели. Разположени, както в самия град, така и в блозаст до него. В зависимост от предпочитанията на хората, къде искат да почиват в Балкана или на центъра на града. Може да си изберето от множеството хотели на града: \n1.	Хотел Хемус - http://www.hotelhemus.com/ \n2.	Хотел Чайка - http://www.chaika.net/ \n3.	Хотел Мира - http://www.mirahotel.eu/ \n4.	Хотел Зора - http://hotelzora.eu/index.php/bg/ \n5.	Хотел Хъшове - http://hashovevraca.com/ \n6.	Хотел Раде 1 - http://pochivka.bg/o-18557-%D1%85%D0%BE%D1%82%D0%B5%D0%BB_%D1%80%D0%B0%D0%B4%D0%B5  \n7.	Хотел Раде 2 \n8.	Хотел Фламинго - http://hotelflamingo.org/ \n9.	Хотел Боди М - 092/ 992444 \n10.	Хотел Иглика Палаз - http://pochivka.bg/o-15924-%D1%85%D0%BE%D1%82%D0%B5%D0%BB_%D0%B8%D0%B3%D1%80%D0%B8%D1%81_%D0%BF%D0%B0%D0%BB%D0%B0%D0%B7 \n11.	Хотел ЕОС БГ - http://www.eosbg-vratsa.com/ \n12. Хотел Класик - 092/ 662370 \n13.	Хотел Лозанов - http://pochivka.bg/o-20128-%D1%85%D0%BE%D1%82%D0%B5%D0%BB_%D0%BB%D0%BE%D0%B7%D0%B0%D0%BD%D0%BE%D0%B2 \n14. Апартаменти Вяра - http://www.hotels-viara-bg.com/ \n15. Стои Лозница - http://www.loznitza.com/ \n\nХотели във Врачанския Балкан \n\n1.	Хотел Кипарис - http://www.hotel-kiparis.eu/ \n2. Комплекс Леденика - http://hotel-ledenika.com/ \n3. Хотел Момена сълза - http://pochivka.bg/o-13124-%D1%81%D0%B5%D0%BC%D0%B5%D0%B5%D0%BD_%D1%85%D0%BE%D1%82%D0%B5%D0%BB_%D0%BC%D0%BE%D0%BC%D0%B8%D0%BD%D0%B0_%D1%81%D1%8A%D0%BB%D0%B7%D0%B0  \n4.	Почевна база Горски дом - 0886/332033 \n5. ПОК Леденика – АЕЦ - http://www.kznpp.org/index.php?lang=bg&amp;p=culture_sport&amp;p1=home_ledenika \n6. Бунгала Оазис - 0888/970370 \n7. Хижа Пършевица -http://pochivka.bg/o-12491-%D0%BA%D1%8A%D1%89%D0%B0_%D1%85%D0%B8%D0%B6%D0%B0_%D0%BF%D1%8A%D1%80%D1%88%D0%B5%D0%B2%D0%B8%D1%86%D0%B0_ \n\nКъщи за Гости: \n\n1. Къща Тони – с. Згориград - http:/\toni.vratsa.eu/index.php \n2. Къща Марчела – с. Згориград - http://pochivka.bg/o-7537-%D0%BA%D1%8A%D1%89%D0%B0_%D0%BC%D0%B0%D1%80%D1%87%D0%B5%D0%BB%D0%B0 \n3. Къща Руми – с. Згориград - https://www.facebook.com/pages/%D0%9A%D1%8A%D1%89%D0%B0-%D0%B7%D0%B0-%D0%93%D0%BE%D1%81%D1%82%D0%B8-%D0%A0%D1%83%D0%BC%D0%B8-Vacation-House-Rumi/347255367462 \n4. Къща Бояна – с. Паволче - http://www.e-vraca.com\turizum/kashta_boiana/deinost.php \n5. Къща Йорданови – с. Паволче - 09189/22 70   \n6. Къща Нели – с. Паволче - 0882/404260 \n7. Къща за гости – с. Челопек - 092/ 6601518 \n8. Къща Маргарита – с. Челопек </string>
    <string name="main_category2_item4_details">Нощен живот \nЗа хората обичащи нащните забавления в града има пиано бар Клуб КАРАМЕЛ гр. Враца, пл. "Христо Ботев" Телефон за резервации: 0899120212, дискотека Go Play Дискотека тел. за резервации: 0884 90 21 06 Адрес: гр. Враца, пл. „Христо Ботев“ №1,  бар The Face Бар "The Face" тел: 0879 58 48 26 Адрес: гр. Враца, ж.к. „Дъбника“ над ОДЗ 4, различни заведения от тези за хранене с музика и забавления, като Нашенци, Славянски кът, Милеви, Пицарии, Китайки ресторанти и други. \nКафе-бар "Night" предлага уютна обстановка, много приятни емоции и перфектно обслужване. Адрес: гр. Мездра, ул. Хр. Ботев №1 Телефон:0879 60 34 24, 0878 77 17 98 Имейл: silveto_89_mz@abv.bg</string>
    <string name="main_category3_item1_details">Автобуси – градси и междуградски.  Враца е осигурен с добре функциониращ градски транспорт. Цените на билетите за врачанския градски транспорт са едни от най-ниските в страната - за автобус 0,60 лв. Типично градски автобусни линии са 5 (Автогара-кв.Бистрец) и 7 (Автогара-кв.Кулата-кв.Нефела). Линиите, пътуващи до селата около Враца също изпълняват функциите на градски транспорт. Това са линии 6 (за селата Паволче и Челопек), 8 (за с.Веслец), 10 (за с.Косталево), 13 , 20 (за с.Згориград), 23А (за с.Лиляче), а също и автобусите от и за Мездра. \n Разписание на автобусите. </string>
    <string name="main_category3_item2_details">Жп. Транспорт – виж разписание на влакове и връзки: http://goo.gl/likxz9</string>
    <string name="main_category3_item3_details">Таксита - На разположение на жителите и гостите на града са и голям брой таксита. Сред най-големите таксиметрови компании са Корект такси, Джет такси, Ичо транс и други.  </string>
    <string name="main_category3_item4_details">Коли под наем Враца &#8211; http://goo.gl/vLPA7R и http://goo.gl/l3C5D2</string>
    <string name="main_category3_item5_details">Маршрутни микробуси разписания – линиите на маршрутките са 2 и 50. Цена на билетче в маршрутните микробуси е 0.80 лв.</string>
    <string name="main_category3_item6_details">Тройбуси враца  С евентуалната реализация на проекта за интегриран градски транспорт се очаква модернизация на тролейбусния транспорт, включваща закупуване на нови тролеи, цялостна рехабилитация на съществуващата контактна мрежа и изграждане на 3 нови ТБ трасета. Цените на билетите за врачанския градски транспорт са едни от най-ниските в страната - за тролей - 0,60 лв (от каса) и 0,70 лв (от водача). \n Тролейбусни линии: \n o	Линия № 1: кв. Медковец – Ученически комплекс \n o	Линия № 4: ХИМКО – ж.к. Дъбника \n o	Линия № 4А: кв. Медковец – ж.к. Дъбника \n o	Линия № 17: ХИМКО – ж.к. Дъбника \n o	Линия № 41: кв. Медковец – Ученически комплекс</string>
    <string name="main_category4_item1_details">Здравеопазване \n\n\nСпешна помощ – В страната се използва телефот 112 за смешна помощ и от там хората ги насочват и свързват към съответните звена за помощ, Бърза помощ, Помиция, Пожарна. \nЗдравеопазването във Враца, като общински и областен център, е добре застъпено от лечебни заведения с различен характер, като МБАЛ „Христо Ботев“, която е най-голямото лечебно заведение в Северозападна България. Тя е открита през 1888 година в частна къща, разполагаща с 40 легла, разпределени в две отделения – мъжко и женско. По-късно тя е преименува на Първостепенна окръжна болница „Христо Ботев“, Враца с разкрити 900 легла, разпределени по профили. В момента болницата разполага с 375 легла и 642 души персонал. Към нея функционират 25 отделения. \n•	Областен диспансер за пневмо-фтизиатрични заболявания със стационар \n•	Междуобластен диспансер за онкологични заболявания със стационар \n•	Областен диспансер по кожно-венерически заболявания \n•	Областен диспансер за психични заболявания \n•	Специализирана очна болница за активно лечение \n•	Медицински център за рехабилитация и спортна медицина \n•	Първа частна специализирана болница за активно лечение по ортопедия и травматология \n•	Медицински център Света Ана \n•	Медицински център Санита \n•	Диагностично-консултативен център – 1 \n•	Диагностично-консултативен център – 2 \n•	Стоматологичен център \nВ града функционират над 30 аптеки. \n\nhttp://www.mbalvratsa.org/ \n</string>
    <string name="history_item1">Museum</string>
    <string name="history_item2">Ethnographic complex</string>
    <string name="history_item3">The hut \"Messenger\"</string>
    <string name="history_item4">The Meshchiite tower</string>
    <string name="history_item5">The Kurtpashov tower</string>
    <string name="history_item6">Monument of Hristo Botev</string>
    <string name="nature_item1">Vratsata</string>
    <string name="nature_item2">Ledenika cave</string>
    <string name="nature_item3">\"Skaklia\" Waterfall</string>
    <string name="nature_item4">Pine Stone</string>
    <string name="nature_item5">Ponora cave</string>
    <string name="nature_item6">God bridge</string>
    <string name="nearby_item1">Okolchitsa</string>
    <string name="nearby_item2">House-museum Grandmother Iliyca</string>
    <string name="nearby_item3">Kaleto</string>
    <string name="nearby_item4">Grandfather Yotso monument</string>
    <string name="nearby_item5">Rashov Dol</string>
    <string name="nearby_item6">Ritlite</string>
    <string name="nearby_item7">Lakatnishki rocks</string>
    <string name="nearby_item8">\"Saint Ivan Pusty\" monastery</string>
    <string name="nearby_item9">Cherepish Monastery </string>
    <string name="nearby_item10">Osenovlashki Monastery</string>
    <string name="fun_item1">Cinema</string>
    <string name="fun_item2">Theater</string>
    <string name="fun_item3">Youth-house</string>
    <string name="fun_item4">Library</string>
    <string name="fun_item5">Events</string>
    <string name="fun_item6">Attractions</string>
    <string name="fun_item7">Ecopaths</string>
    <string name="fun_item8">Sport</string>
</resources>