<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.ynalbantov.android.panda.visit.vratsa.FunActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewApplicationName"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_category1_item4" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="4sp">

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i01"
                    android:clickable="true"
                    android:onClick="onI01Click"
                    android:text="@string/fun_item1" />

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i02"
                    android:clickable="true"
                    android:onClick="onI02Click"
                    android:text="@string/fun_item2" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="4sp">

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i03"
                    android:clickable="true"
                    android:onClick="onI03Click"
                    android:text="@string/fun_item3" />

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i04"
                    android:clickable="true"
                    android:onClick="onI04Click"
                    android:text="@string/fun_item4" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="4sp">

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i05"
                    android:clickable="true"
                    android:onClick="onI05Click"
                    android:text="@string/fun_item5" />

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i06"
                    android:clickable="true"
                    android:onClick="onI06Click"
                    android:text="@string/fun_item6" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="4sp">

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i07"
                    android:clickable="true"
                    android:onClick="onI07Click"
                    android:text="@string/fun_item7" />

                <TextView
                    style="@style/image_text"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_gravity="start"
                    android:background="@drawable/c01s04i08"
                    android:clickable="true"
                    android:onClick="onI08Click"
                    android:text="@string/fun_item8" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>